// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelection component accepts a url to the icon 1`] = `
<div>
  <div
    class="LanguageSelection"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root heading Typography MuiTypography-h6"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-text buttonStyles-text-42 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-44"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-45 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageIcon"
                  height="16px"
                  src="path/to/al.svg"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-text buttonStyles-text-42 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-44"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-45 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageIcon"
                  height="16px"
                  src="path/to/at.svg"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component accepts introduction text 1`] = `
<div>
  <div
    class="LanguageSelection"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root heading Typography MuiTypography-h6"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-24"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-24"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"France\\",\\"action\\":\\"/ch/fr-ch/\\"}"
            href="/ch/fr-ch"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-24"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              France
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly 1`] = `
<div>
  <div
    class="LanguageSelection"
  >
    <div>
      <h6
        class="MuiTypography-root heading Typography MuiTypography-h6"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"France\\",\\"action\\":\\"/ch/fr-ch/\\"}"
            href="/ch/fr-ch"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageIcon"
                  height="16px"
                  width="20px"
                />
              </span>
              France
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly if forceMobile 1`] = `
<div>
  <div
    class="LanguageSelection"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root heading Typography MuiTypography-h6"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-text buttonStyles-text-62 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-64"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-65 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageIcon"
                  height="16px"
                  src="path/to/al.svg"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-text buttonStyles-text-62 NavigationListButton link MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label buttonStyles-label-64"
            >
              <span
                class="MuiButton-startIcon buttonStyles-startIcon-65 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageIcon"
                  height="16px"
                  src="path/to/at.svg"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
